<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAccent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logoWrapper"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="50dp"
        android:paddingBottom="40dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cellular_network"
            android:layout_marginStart="30dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/samic_sub"
                android:textColor="@color/colorWhite"
                android:textSize="22sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/samic_sub_detail"
                android:textColor="@color/colorWhite"
                android:textSize="13sp"
                android:layout_marginTop="30dp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:id="@+id/buttonWrapper"
        android:orientation="vertical"
        android:background="@drawable/home_bottom_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoWrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight=".4"
                android:layout_height="wrap_content"
                android:id="@+id/btnUSSDWrapper"
                android:gravity="center"
                android:background="@drawable/linearlayout_background"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sms"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textColor="@color/colorText1"
                    android:layout_marginBottom="10dp"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:padding="5dp"
                    android:drawableEnd="@drawable/ic_trending_flat"
                    android:text="@string/tap_to_continue"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:drawablePadding="5dp"
                    android:background="@color/colorText1"
                    android:id="@+id/btnSms"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:id="@+id/btnSmsWrapper"
                android:gravity="center"
                android:background="@drawable/linearlayout_background"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/airtime"
                    android:textSize="18sp"
                    android:textAllCaps="true"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/colorText2"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:padding="5dp"
                    android:drawableEnd="@drawable/ic_trending_flat"
                    android:text="@string/tap_to_continue"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:drawablePadding="5dp"
                    android:background="@color/colorText2"
                    android:id="@+id/btnUSSD"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnDataWrapper"
            android:gravity="center"
            android:background="@drawable/linearlayout_background"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorText2"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:padding="5dp"
                android:drawableEnd="@drawable/ic_trending_flat"
                android:text="@string/tap_to_continue"
                android:gravity="center"
                android:textColor="@color/white"
                android:drawablePadding="5dp"
                android:background="@color/colorText2"
                android:id="@+id/btnData"/>
        </LinearLayout>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/networkSpinner"
            android:layout_marginTop="10dp"
            android:drawSelectorOnTop="true"
            android:padding="10dp"
            android:background="#000000"
            android:entries="@array/networks"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sendUssd"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:text="@string/call"
            android:padding="10dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>